--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" type="image/png" href="media/favicon.png">
         <title>Please Stand By...</title>
     </head>
     <body>
@@ -15,6 +16,11 @@
         <br>
         <h3>What is this page?</h3>
         <div>This is a development page for HTML projects hosted on ConnorTheVGFan78.com and it's associated websites. Web pages are developed and tested here publicly before they reach their final homes on the Net.</div>
+	<br>
+	<br>
+	<br>
+        <h3>Why am I seeing it?</h3>
+        <div>It means two things. Firstly, it means that you are snooping around for files or projects you shouldn't have access to (in which case, you should stop <a href="https://youtu.be/c46_iL2QqOE?t=61">before this happens</a>). Secondly, this screen shows up when a project is not in active development on this Dev channel. Think of this page as a placeholder. I could leave it empty and have your web browser return a <i>404: FILE NOT FOUND</i> error, but where's the fun in that?</div>
         <br>
         <br>
         <br>
@@ -22,5 +28,9 @@
         <br>
         <h3>Previous Projects that DEV1 has hosted:</h3>
         <div><i>None yet, but we hope to host new and exciting preview pages here soon!!</i></div>
+        <br>
+        <br>
+        <br>
+	<footer>This page, as well as it's Source Code, is hosted on <a href="https://github.com/ConnorTheVGFan78/CTVGF78Dev1Site">Github</a>. | Webpage (C) 2022 ConnorTheVGFan78, All Rights Reserved.</footer>
     </body>
 </html>
